fixing image wrapping stuff

--- a/css/app.scss
+++ b/css/app.scss
@@ -274,7 +274,6 @@ article {
 }
 
 .bio-photo {
-  float: left;
   margin: {
     left: 0em;
     top: 0.5em;
